syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service CompanyLocation {
   rpc ReadCompanyLocation(IdRequestCompLocation) returns (CompanyLocationPayLoad);  
   rpc CreateCompanyLocation(CompanyLocationPayLoad) returns (google.protobuf.Empty);
   rpc UpdateCompanyLocation(CompanyLocationPayLoad) returns (google.protobuf.Empty);
   rpc DeleteCompanyLocation(CompanyLocationPayLoad) returns (google.protobuf.Empty);
  }

message IdRequestCompLocation {
    string Id = 1;
}

message CompanyLocationPayLoad {
         string Id = 1;   
         string Company = 2;
         string CountryCode = 3;
         string Province = 4;
         string Street = 5;
         string City  = 6;
         string PostalCode = 7;
}